LogServ ChangeLog
=============================================================================
3.0 * Mark * 
- CHANS command is pointless since it requires a sub command so tidy up 
  command path by promoting the sub commands. (M)
- Replace file functions with core portable replacements. (M)
- Split processing code into seperate files. Easier maintainance and allows
  us to create a template file for use in user submissions of alternative
  log formats. (M)
- Replace safe_channame/_irclog_safe with core make_safe_filename call. (M)
- Port to 3.0 API (M)

1.2 * Mark * 17/2/2003
- We now try to read nick, user, host and realname so these can be configured more 
  easily (M)
- SET interface for nick/user/host/realname added (M)
- Fix up crash on invalid Channel messages (F)

1.1 * Fish * 17/1/2003
- Fixed up help text.
- Fixed a crash when adding the first channel

1.0 - Fish 
- Initial Release