@@ -29,6 +29,7 @@ int mirc_joinproc(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_partproc(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_msgproc(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_noticeproc(ChannelLog *chandata, CmdParams* cmdparams);
+int mirc_ctcpaction(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_quitproc(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_topicproc(ChannelLog *chandata, CmdParams* cmdparams);
 int mirc_kickproc(ChannelLog *chandata, CmdParams* cmdparams);
