@@ -63,6 +63,7 @@ typedef enum {
 	LGSMSG_PART,
 	LGSMSG_MSG,
 	LGSMSG_NOTICE,
+	LGSMSG_CTCPACTION,
 	LGSMSG_QUIT,
 	LGSMSG_TOPIC,
 	LGSMSG_KICK,
