@@ -1,6 +1,7 @@
 LogServ ChangeLog
 =============================================================================
 3.0 * Mark * 
+- Add support for channel notices and core side CTCP ACTION parsing. (M)
 - CHANS command is pointless since it requires a sub command so tidy up 
   command path by promoting the sub commands. (M)
 - Replace file functions with core portable replacements. (M)
